[workspace]
members = ["packages/*"]
resolver = "3"

[workspace.package]
version = "0.3.1"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
license-file = "LICENSE"
repository = "https://github.com/0xAA55-rs/rustwav"

[package]
name = "rustwav"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
readme = "Readme.md"
description = "WAV format audio file parser and creator, with resampler and downmixer, can change the sample rate of the audio file, and a lot of sub-format support e.g. ADPCM, aLaw, MuLaw, mp3, opus, flac, ogg vorbis, etc."
keywords = ["audio", "WAV", "codec", "RIFF"]

[dependencies]
ogg.workspace = true
xlaw.workspace = true
vorbis.workspace = true
bitwise.workspace = true
readwrite.workspace = true
downmixer.workspace = true
savagestr.workspace = true
audioutils.workspace = true
filehasher.workspace = true
copiablebuf.workspace = true
rustwav-core.workspace = true

tempfile.workspace = true
sampletypes.workspace = true
resampler-rs.workspace = true

[workspace.dependencies]
ogg = { version = "*", path = "packages/ogg" }
xlaw = { version = "*", path = "packages/xlaw" }
vorbis = { version = "*", path = "packages/vorbis" }
bitwise = { version = "*", path = "packages/bitwise" }
readwrite = { version = "*", path = "packages/readwrite" }
downmixer = { version = "*", path = "packages/downmixer" }
savagestr = { version = "*", path = "packages/savagestr" }
audioutils = { version = "*", path = "packages/audioutils" }
filehasher = { version = "*", path = "packages/filehasher" }
copiablebuf = { version = "*", path = "packages/copiablebuf" }
rustwav-core = { version = "*", path = "packages/rustwav-core" }

sampletypes = "0.1.3"
resampler-rs = "0.0.1"
tempfile = "3.18.0"

[features]
default = ["id3", "text_encoding", "mp3dec", "mp3enc", "opus", "flac", "vorbis", "oggvorbis"]
text_encoding = ["savagestr/text_encoding"]
id3 = ["rustwav-core/id3"]
mp3dec = ["rustwav-core/mp3dec"]
mp3enc = ["rustwav-core/mp3enc"]
opus = ["rustwav-core/opus"]
flac = ["rustwav-core/flac"]
vorbis = ["rustwav-core/vorbis"]
oggvorbis = ["rustwav-core/oggvorbis"]

[profile.release]
lto = "fat"

[lib]
name = "rustwav"
path = "src/lib.rs"
