[workspace]
members = ["packages/*"]
resolver = "3"

[workspace.package]
version = "0.3.5"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
license-file = "LICENSE"
repository = "https://github.com/0xAA55-rs/rustwav"
readme = "Readme.md"
description = "WAV format audio file parser and creator, with resampler and downmixer, can change the sample rate of the audio file, and a lot of sub-format support e.g. ADPCM, aLaw, MuLaw, mp3, opus, flac, ogg vorbis, etc."
keywords = ["audio", "WAV", "codec", "RIFF"]

[package]
name = "rustwav"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
xlaw.workspace = true
flac-rs.workspace = true
tinyogg.workspace = true
downmixer.workspace = true
savagestr.workspace = true
sampletypes.workspace = true
copiablebuf.workspace = true
revorbis-rs.workspace = true
resampler-rs.workspace = true
rustwav-core.workspace = true
fileparthasher.workspace = true
shared_io_utils.workspace = true
audiochannelutils.workspace = true

tempfile.workspace = true

[workspace.dependencies]
xlaw = { version = "^0" }
flac-rs = { version = "^0" }
tinyogg = { version = "^0", path = "packages/tinyogg" }
downmixer = { version = "^0" }
savagestr = { version = "^0" }
copiablebuf = { version = "^0" }
revorbis-rs = { version = "^0", path = "packages/revorbis-rs" }
resampler-rs = { version = "^0" }
sampletypes = { version = "^0" }
rustwav-core = { version = "^0", path = "packages/rustwav-core" }
fileparthasher = { version = "^0", path = "packages/fileparthasher" }
shared_io_utils = { version = "^0", path = "packages/shared_io_utils" }
audiochannelutils = { version = "^0" }

tempfile = "^3"

[features]
default = ["id3", "text_encoding", "mp3dec", "mp3enc", "opus", "flac", "vorbis", "oggvorbis"]
text_encoding = ["savagestr/text_encoding"]
id3 = ["rustwav-core/id3"]
mp3dec = ["rustwav-core/mp3dec"]
mp3enc = ["rustwav-core/mp3enc"]
opus = ["rustwav-core/opus"]
flac = ["rustwav-core/flac"]
vorbis = ["rustwav-core/vorbis"]
oggvorbis = ["rustwav-core/oggvorbis"]

[profile.release]
lto = "fat"

[lib]
name = "rustwav"
path = "src/lib.rs"
